--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,26 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>Convirgance (Web)</name>
+    <licenses>
+        <license>
+          <name>MIT License</name>
+          <url>http://www.opensource.org/licenses/mit-license.php</url>
+        </license>
+    </licenses>
+    <developers>
+        <developer>
+            <name>Jerason Banes</name>
+            <email>jerasonbanes@invirgance.com</email>
+            <organization>Invirgance</organization>
+            <organizationUrl>http://www.invirgance.com</organizationUrl>
+        </developer>
+    </developers>
+    <scm>
+        <connection>scm:git:https://github.com/InvirganceOpenSource/convirgance-web.git</connection>
+        <developerConnection>scm:git:https://github.com/InvirganceOpenSource/convirgance-web.git</developerConnection>
+        <url>https://github.com/InvirganceOpenSource/convirgance-web/tree/${project.scm.tag}</url>
+        <tag>main</tag>
+    </scm>
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
