--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>convirgance-web</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>Convirgance (Web)</name>
+    <name>Convirgance (Web Services)</name>
     <licenses>
         <license>
           <name>MIT License</name>
@@ -53,6 +53,5 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
-        <exec.mainClass>com.invirgance.convirgance.ConvirganceWeb</exec.mainClass>
     </properties>
 </project>
