Added JSONInput and CSVInput to wirings

--- a/src/main/resources/META-INF/wirings.properties
+++ b/src/main/resources/META-INF/wirings.properties
@@ -1,4 +1,4 @@
-QueryBinding=com.invirgance.convirgance.web.binding.QueryBinding
-RequestParameter=com.invirgance.convirgance.web.parameter.RequestParameter
+JSONInput=com.invirgance.convirgance.input.JSONInput
+CSVInput=com.invirgance.convirgance.input.CSVInput
 JSONOutput=com.invirgance.convirgance.output.JSONOutput
 CSVOutput=com.invirgance.convirgance.output.CSVOutput
